crates/codegen/language/tests/src/fail/parsing/empty_string/test.stderr
error: Expected a non-empty string.
  --> src/fail/parsing/empty_string/test.rs:15:63
   |
15 |                 definitions = [TokenDefinition(scanner = Atom(""))]
   |                                                               ^^
